@@ -1,3 +1,11 @@
+2014-11-22 Ben Shi <powerstudio1st AT 163.com>
+	* src/SDCCpeeph.c:
+	  Add function notSimilar().
+	* src/stm8/peep.c:
+	  Make notUsed() more aggressive.
+	* src/stm8/peeph.def:
+	  Add more rules.
+
 2014-11-21 Philipp Klaus Krause <philipp@informatik.uni-frankfurt.de>
 
 	* src/stm8/main.c:
